objects/HESA_Code__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>EEA_Nationality__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used within Application form and only applicable where Record Type = Nationality</description>
        <inlineHelpText>Used within Application form and only applicable where Record Type = Nationality</inlineHelpText>
        <label>EEA Nationality</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>HESA_Code__c</fullName>
        <label>HESA Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>HESA_Name__c</fullName>
        <label>HESA Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Location of country definitions for HESA Nationality and HESA Domicile. The former is flagged to show EEA countries (for Home/UE v Overseas fee split) 

NB definitions for HESA Disabilities &amp; HESA Ethnicity</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>HESA Code</label><nameField>
        <label>HESA Friendly Name</label>
        <type>Text</type>
    </nameField><pluralLabel>HESA Codes</pluralLabel><recordTypeTrackFeedHistory>true</recordTypeTrackFeedHistory><recordTypeTrackHistory>true</recordTypeTrackHistory><sharingModel>Read</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>HESA_Name__c</columns>
        <columns>HESA_Code__c</columns>
        <columns>EEA_Nationality__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>Color_Test_Listview</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>HESA_Name__c</columns>
        <columns>HESA_Code__c</columns>
        <columns>EEA_Nationality__c</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Virgin</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>United Kingdom</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>England</value>
        </filters>
        <label>Color Test Listview</label>
        <sharedTo>
            <group>Color_Group</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>Domicile</fullName>
        <columns>NAME</columns>
        <columns>HESA_Name__c</columns>
        <columns>HESA_Code__c</columns>
        <columns>Active__c</columns>
        <columns>EEA_Nationality__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HESA_Code__c.Domicile</value>
        </filters>
        <label>Domicile</label>
    </listViews><listViews>
        <fullName>EEA_EU_Nationalities</fullName>
        <columns>NAME</columns>
        <columns>HESA_Name__c</columns>
        <columns>HESA_Code__c</columns>
        <columns>EEA_Nationality__c</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HESA_Code__c.Nationality</value>
        </filters>
        <filters>
            <field>EEA_Nationality__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>EAA-EU Nationalities</label>
    </listViews><listViews>
        <fullName>MSTUFEE_Values</fullName>
        <columns>NAME</columns>
        <columns>HESA_Name__c</columns>
        <columns>HESA_Code__c</columns>
        <columns>Active__c</columns>
        <columns>EEA_Nationality__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HESA_Code__c.MSTUFEE</value>
        </filters>
        <label>MSTUFEE Values</label>
    </listViews><listViews>
        <fullName>Nationality</fullName>
        <columns>NAME</columns>
        <columns>HESA_Name__c</columns>
        <columns>HESA_Code__c</columns>
        <columns>EEA_Nationality__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HESA_Code__c.Nationality</value>
        </filters>
        <label>Nationality</label>
    </listViews><listViews>
        <fullName>QUALENT3_Values</fullName>
        <columns>NAME</columns>
        <columns>HESA_Name__c</columns>
        <columns>HESA_Code__c</columns>
        <columns>Active__c</columns>
        <columns>EEA_Nationality__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HESA_Code__c.QUALENT3</value>
        </filters>
        <label>QUALENT3 Values</label>
    </listViews><listViews>
        <fullName>Subjects</fullName>
        <columns>NAME</columns>
        <columns>HESA_Name__c</columns>
        <columns>HESA_Code__c</columns>
        <columns>Active__c</columns>
        <columns>EEA_Nationality__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HESA_Code__c.Subjects</value>
        </filters>
        <label>Subjects</label>
    </listViews><listViews>
        <fullName>UK_Domiciles_Nationalities</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>HESA_Name__c</columns>
        <columns>HESA_Code__c</columns>
        <columns>EEA_Nationality__c</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>United Kingdom</value>
        </filters>
        <filters>
            <field>HESA_Code__c</field>
            <operation>equals</operation>
            <value>XF</value>
        </filters>
        <filters>
            <field>HESA_Code__c</field>
            <operation>equals</operation>
            <value>XG</value>
        </filters>
        <label>UK Domiciles &amp; Nationalities</label>
        <sharedTo>
            <group>Color_Group</group>
        </sharedTo>
    </listViews><recordTypes>
        <fullName>Domicile</fullName>
        <active>true</active>
        <label>Domicile</label>
    </recordTypes><recordTypes>
        <fullName>MSTUFEE</fullName>
        <active>true</active>
        <description>HESA codes for major source of tuition fees</description>
        <label>MSTUFEE</label>
    </recordTypes><recordTypes>
        <fullName>Nationality</fullName>
        <active>true</active>
        <label>Nationality</label>
    </recordTypes><recordTypes>
        <fullName>QUALENT3</fullName>
        <active>true</active>
        <description>For Highest qualification on entry values from HESA</description>
        <label>QUALENT3</label>
    </recordTypes><recordTypes>
        <fullName>Subjects</fullName>
        <active>true</active>
        <description>Used for HESA Course and Module subjects</description>
        <label>Subjects</label>
    </recordTypes></CustomObject>